--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-fastapi
-uvicorn
-transformers
-torch
-pytest
-httpx
-streamlit
+transformers==4.25.1
+torch==1.13.1
+pydantic==1.10.4
+fastapi==0.89.1
+uvicorn==0.20.0
+pytest==7.2.1
+httpx==0.23.3
